--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -19,7 +18,7 @@
             background-color: #fff;
         }
         #vimeo-player {
-            width: 100%;
+            width: 100%; /* Плеер занимает 100% ширины контейнера */
             height: 500px;
             border: none;
         }
@@ -43,10 +42,10 @@
         .video-item {
             display: flex;
             align-items: center;
-            padding: 10px;
+            padding: 5px;
             background-color: #f0f0f0;
-            margin-bottom: 10px;
-            border-radius: 8px;
+            margin-bottom: 5px;
+            border-radius: 6px;
             cursor: pointer;
             transition: background-color 0.3s;
         }
@@ -54,48 +53,127 @@
             background-color: #d8d8d8;
         }
         .video-thumbnail {
-            width: 120px;
-            height: 80px;
-            margin-right: 20px;
-            border-radius: 5px;
+            width: 100px;
+            height: 60px;
+            margin-right: 10px;
+            border-radius: 4px;
             object-fit: cover;
         }
         .video-item-content {
             flex-grow: 1;
         }
         .video-item-title {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
             margin: 0;
         }
         .video-item-description {
-            font-size: 14px;
+            font-size: 12px;
             color: #666;
-            margin: 5px 0 0;
+            margin: 3px 0 0;
         }
         .section-title {
-            font-size: 28px;
-            margin: 40px 0 20px;
+            font-size: 24px;
+            margin: 30px 0 15px;
             font-weight: bold;
+        }
+        #post-video-content {
+            display: none;
+            text-align: center;
+            margin-top: 20px;
+        }
+        #video-buttons button {
+            padding: 10px 20px;
+            margin: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+        }
+        #video-buttons button:not(.next-button) {
+            background-color: #4CAF50; /* Зеленый для всех кнопок */
+            color: white;
+        }
+        #video-buttons .next-button {
+            background-color: #2196F3; /* Синий для кнопки "Далее" */
+            color: white;
+        }
+        #video-buttons button:hover {
+            opacity: 0.8;
+        }
+
+        /* Адаптация для мобильных устройств */
+        @media (max-width: 768px) {
+            #vimeo-player {
+                height: 300px; /* Уменьшаем высоту плеера для планшетов и телефонов */
+            }
+            .video-thumbnail {
+                width: 80px;  /* Уменьшаем миниатюры на мобильных устройствах */
+                height: 50px;
+            }
+            .video-title {
+                font-size: 20px; /* Уменьшаем размер заголовка */
+            }
+            .video-item-title {
+                font-size: 14px; /* Уменьшаем шрифты в рекомендациях */
+            }
+            .video-item-description {
+                font-size: 10px; /* Ещё меньше для мобильных экранов */
+            }
+            #video-buttons button {
+                width: 100%; /* Кнопки растягиваются на всю ширину экрана */
+                margin: 5px 0;
+                padding: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            #vimeo-player {
+                height: 200px; /* Ещё меньше для маленьких экранов */
+            }
+            .video-thumbnail {
+                width: 60px;  /* Миниатюры ещё меньше */
+                height: 40px;
+            }
+            .section-title {
+                font-size: 20px; /* Уменьшаем заголовок секций */
+            }
         }
     </style>
 </head>
 <body>
 
 <div id="video-section">
-    <!-- Плеер -->
-    <iframe id="vimeo-player" src="https://player.vimeo.com/video/1008355730" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    
+    <!-- Контейнер для плеера и блока с кнопками -->
+    <div id="player-container">
+        <!-- Плеер -->
+        <iframe id="vimeo-player" src="https://player.vimeo.com/video/1008355730" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        <!-- Блок с кнопками, который появится после завершения первого видео -->
+        <div id="post-video-content">
+            <p>На этом экране можно выбрать видео, которые вам интереснее всего посмотреть.</p>
+            <p>Вы узнаете, как методология трекинга может быть полезна предпринимателю, коучу, руководителю, консультанту, инвестору или трекеру.</p>
+            <div id="video-buttons">
+                <button onclick="loadVideo(1)">Предприниматели</button>
+                <button onclick="loadVideo(2)">Коучи</button>
+                <button onclick="loadVideo(3)">Консультанты</button>
+                <button onclick="loadVideo(4)">Руководители и специалисты</button>
+                <button onclick="loadVideo(5)">Инвесторы</button>
+                <button onclick="loadVideo(6)">Трекеры</button>
+                <button class="next-button" onclick="loadNextVideo()">Далее</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Информация о текущем видео -->
     <div id="video-info">
         <p class="video-title">Как растить свои и чужие бизнесы</p>
         <p class="video-description">Как предпринимателям и руководителям, консультантам и коучам, инвесторам, действующим трекерам растить свой бизнес или помогать другим развивать их бизнесы</p>
     </div>
 
-    <!-- Список видео -->
-    <h2 class="section-title">Список видео</h2>
+    <!-- Блок с рекомендациями (1) -->
+    <h2 class="section-title">Как трекинг помогает в разных ролях</h2>
     <div id="video-list">
-        <!-- Видео элементы -->
         <div class="video-item" onclick="loadVideo(0)">
             <img src="https://vumbnail.com/1008355730.jpg" alt="thumbnail" class="video-thumbnail">
             <div class="video-item-content">
@@ -110,7 +188,81 @@
                 <p class="video-item-description">Что нужно предпринимателю для счастья, и как трекинг помогает...</p>
             </div>
         </div>
-        <!-- Добавь остальные элементы с видео так же -->
+        <div class="video-item" onclick="loadVideo(2)">
+            <img src="https://vumbnail.com/1008356200.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Коучи</p>
+                <p class="video-item-description">Помогает ли коучинг предпринимателям, и что нужно добавить...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(3)">
+            <img src="https://vumbnail.com/1008356649.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Консультанты</p>
+                <p class="video-item-description">Как быть хорошим консультантом, давать клиенту много пользы...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(4)">
+            <img src="https://vumbnail.com/1008357201.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Руководители и специалисты</p>
+                <p class="video-item-description">Что делать, если вы перестали расти, как выйти на более высокий...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(5)">
+            <img src="https://vumbnail.com/1008357536.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Инвесторы</p>
+                <p class="video-item-description">Как отбирать бизнесы, которые не будут сливать ваши деньги...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(6)">
+            <img src="https://vumbnail.com/1008980270.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Трекеры</p>
+                <p class="video-item-description">Как поднять чек, увеличить лайфтайм клиента, слезть с иглы акселераторов...</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Блок с рекомендациями (2) -->
+    <h2 class="section-title">Как устроен трекинг</h2>
+    <div id="video-list">
+        <div class="video-item" onclick="loadVideo(7)">
+            <img src="https://vumbnail.com/1008358797.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Три главных вопроса</p>
+                <p class="video-item-description">Как растить бизнес. Чужими руками. И получать за это много денег...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(8)">
+            <img src="https://vumbnail.com/1008359055.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Ваша экспертиза ничего не стоит!</p>
+                <p class="video-item-description">Что происходит, когда вы основываете свою ценность на экспертизе...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(9)">
+            <img src="https://vumbnail.com/1008358940.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Главное ограничение на пути к росту бизнеса</p>
+                <p class="video-item-description">Что такое главное ограничение, как устроен цикл роста бизнеса...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(10)">
+            <img src="https://vumbnail.com/1008358627.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Кто такой трекер</p>
+                <p class="video-item-description">Самые важные определения и концепции: как работает трекер...</p>
+            </div>
+        </div>
+        <div class="video-item" onclick="loadVideo(11)">
+            <img src="https://vumbnail.com/1008358483.jpg" alt="thumbnail" class="video-thumbnail">
+            <div class="video-item-content">
+                <p class="video-item-title">Одна сплошная польза</p>
+                <p class="video-item-description">Как трекинг помогает бизнесам на разных стадиях роста...</p>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -124,7 +276,9 @@
         { videoId: '1008356649', title: 'Консультанты', description: 'Как быть хорошим консультантом, давать клиенту много пользы и зарабатывать много денег...' },
         { videoId: '1008357201', title: 'Руководители и специалисты', description: 'Что делать, если вы перестали расти, как выйти на более высокий уровень в управлении...' },
         { videoId: '1008357536', title: 'Инвесторы', description: 'Как отбирать бизнесы, которые не будут сливать ваши деньги в трубу...' },
-        { videoId: '1008358089', title: 'Трекеры', description: 'Как поднять чек, увеличить лайфтайм клиента, слезть с иглы акселераторов...' },
+        { videoId: '1008980270', title: 'Трекеры', description: 'Как поднять чек, увеличить лайфтайм клиента, слезть с иглы акселераторов...' },
+
+        // Блок "Как устроен трекинг"
         { videoId: '1008358797', title: 'Три главных вопроса', description: 'Как растить бизнес. Чужими руками. И получать за это много денег...' },
         { videoId: '1008359055', title: 'Ваша экспертиза ничего не стоит!', description: 'Что происходит, когда вы основываете свою ценность на экспертизе...' },
         { videoId: '1008358940', title: 'Главное ограничение на пути к росту бизнеса', description: 'Что такое главное ограничение, как устроен цикл роста бизнеса...' },
@@ -135,12 +289,30 @@
     let currentVideoIndex = 0;
     let player = new Vimeo.Player('vimeo-player', { id: videos[currentVideoIndex].videoId });
 
-    // Функция загрузки видео по индексу
+    // Загрузка видео по индексу с прокруткой к плееру
     function loadVideo(index) {
         currentVideoIndex = index;
         player.loadVideo(videos[currentVideoIndex].videoId).then(function() {
             updateVideoInfo();
+            document.getElementById('vimeo-player').style.display = 'block'; // Показываем плеер
+            document.getElementById('post-video-content').style.display = 'none'; // Скрываем кнопки
+            scrollToPlayer(); // Прокручиваем к плееру
         });
+    }
+
+    // Прокрутка страницы к плееру
+    function scrollToPlayer() {
+        const playerContainer = document.getElementById('player-container');
+        playerContainer.scrollIntoView({ behavior: 'smooth' });
+    }
+
+    // Загрузка следующего видео
+    function loadNextVideo() {
+        currentVideoIndex++;
+        if (currentVideoIndex >= videos.length) {
+            currentVideoIndex = 0; // Если последнее видео, возвращаемся к первому
+        }
+        loadVideo(currentVideoIndex);
     }
 
     // Обновление информации о видео
@@ -149,13 +321,19 @@
         document.querySelector('.video-description').textContent = videos[currentVideoIndex].description;
     }
 
-    // Автопереключение на следующее видео
+    // Определение сегментных видео и переход на следующее видео из блока "Как устроен трекинг"
     player.on('ended', function() {
-        currentVideoIndex++;
-        if (currentVideoIndex >= videos.length) {
-            currentVideoIndex = 0; // Если текущее видео — последнее, начнем с первого
+        if (currentVideoIndex === 1 || currentVideoIndex === 2 || currentVideoIndex === 3 || currentVideoIndex === 4 || currentVideoIndex === 5 || currentVideoIndex === 6) {
+            // Если закончилось одно из сегментных видео (например, Предприниматели, Коучи и т.д.)
+            loadVideo(7); // Переход на первое видео из блока "Как устроен трекинг"
+        } else if (currentVideoIndex === 0) {
+            // Если закончилось первое видео, скрываем плеер и показываем кнопки
+            document.getElementById('vimeo-player').style.display = 'none';
+            document.getElementById('post-video-content').style.display = 'block';
+        } else {
+            // Иначе переходим на следующее видео
+            loadNextVideo();
         }
-        loadVideo(currentVideoIndex); // Загрузить следующее видео
     });
 </script>
 
