--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             document.getElementById('post-video-content').style.display = 'block';
         } else if (currentVideoIndex === 11) {
             // Если закончилось последнее видео, перенаправляем на нужную ссылку
-            window.location.href = 'https://vk.cc/cAGAPf';
+            window.location.href = 'https://docs.google.com/spreadsheets/d/1eaRQrbqokvZTVCn0fkuMPeAZPEzyBIcX/edit?usp=sharing&ouid=112452900066207805999&rtpof=true&sd=true';
         } else {
             // Иначе переходим на следующее видео
             loadNextVideo();
